2019-08-21  Raphael 'kena' Poss  <knz@thaumogen.net>

	Add missing UT-LEON3 / LEON2-MT compile flags.

	* tools/bin/cce.in: Document the special flag usage,
	pass `-x flush-before-delayed' for UT-LEON3 and
	`-x no-create-strategies' for both UT-LEON3 and LEON2-MT.

2019-08-21  Raphael 'kena' Poss  <knz@thaumogen.net>

	Make UT-LEON3 also use the ram-based debug interface.

	* tools/include/svp/testoutput.h: Also use the memory-based `dbg` file
	descriptors when building for `fpga' + arch `mtsparc'.

2019-08-21  Raphael 'kena' Poss  <knz@thaumogen.net>

	Make the python version configurable during bootstrap

	* tests/build-aux/mkalltests.sh: Use `$PYTHON' if defined.

2016-12-03  Raphael 'kena' Poss  <knz@thaumogen.net>

	Code generation fixes for LEON2-MT.

	* tools/slc/mt/common/gentfun.py (TFun_2_MTFun.visit_fundef):
	Ensure that the declaration of the index register appears after
	the end of the prologue, so that spills of the index do not get
	eliminated during post-processing.

	* tools/slc/mt/leon2mt/asmproc/base.py: Do not initialize
	callee-save registers (`protectallcallregs') since the
	implementation now pre-initializes registers. Do ensure that
	`t_end' does not appear just after a delayed instruction.

	* tools/slc/mt/leon2mt/seq.py (TFun_2_L2MTCFun.visit_indexdecl),
	* tools/slc/mt/leon2mt/gentfun.py
	(TFun_2_L2MTTFun.visit_indexdecl): Fix the layout of index
	registers.

2016-12-01  Raphael 'kena' Poss  <knz@thaumogen.net>

	LEON2/LEON2-MT: fix the memory initialization code.

	* tools/lib/mt/l2mt/bootstrap.c: Properly type the pointers so
	that the full range gets initialized.

2016-11-30  Raphael 'kena' Poss  <knz@thaumogen.net>

	LEON2: fix the slrts.

	* tools/lib/mt/l2/slrt.s,
	* tools/lib/mt/l2-sim/slrt.s: Remove the stale reference to `tls.inc'.

2016-11-30  Raphael 'kena' Poss  <knz@thaumogen.net>

	LEON2-MT: Avoid scanning the FGPA board for data too often.

	* tools/leon2mt-fpga-ctl.in: Increase the scan delay in the main